kubernetes/apps/default/sharerr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sharerr
  namespace: default
  labels:
    app.kubernetes.io/name: sharerr
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: sharerr
    app.kubernetes.io/instance: sharerr
    app.kubernetes.io/name: sharerr
